@@ -12,6 +12,7 @@ Issue #1416 Add parameter -sqlCredential to Run-TestsInBcContainer and Get-Tests
 Issue #1415 Implicitely import the Test Framework in Setup-BcContainerTestUsers if not already installed
 Issue #1426 includePerformanceToolkit should automatically include includeTestToolkit and includeTestFrameWorkOnly (if not specified)
 Publishing apps from a .zip file, where the name isn't .zip caused an error
+Add parameter gitLab to Run-AlPipeline to add support for surfacing test errors on GitLab
 
 1.0.12
 Issue #1401 set app version if appBuild -or appRevision is specified
